@@ -1,5 +1,7 @@
 dpkg (1.10.16) unstable; urgency=low
 
+  * Fix configure to set HAVE_SETLOCALE.  Closes: #211816
+
  -- Adam Heath <doogie@debian.org>  UNRELEASED
 
 dpkg (1.10.15) unstable; urgency=low
