@@ -1,3 +1,7 @@
+Sat Sep 20 17:44:40 CDT 2003 Adam Heath <doogie@debian.org>
+
+  * configure.in, include/dpkg.h.in: Fix (non-)detection of setlocale.
+
 Fri Sep 19 20:02:19 CDT 2003 Adam Heath <doogie@debian.org>
 
   * debian/changelog: Set date/time for 1.10.15 release.
